# openai_project

./: README.md  app_install.sh  app_run.sh  mosquitto.conf
project_openai/: CMakeLists.txt
project_openai/extralib/curl/lib/: libcurl.la  libcurl.so.4
project_openai/extralib/curl/lib/pkgconfig/: libcurl.pc
project_openai/extralib/mqtt/lib/: libmosquitto.so.1.6.9  libmosquittopp.so.1.6.9
project_openai/extralib/mqtt/lib/pkgconfig/: libmosquitto.pc  libmosquittopp.pc
project_openai/extralib/mqtt/sbin/: mosquitto
project_openai/modules/mqttclient/: mqttclient.cpp  mqttclient.h
project_openai/src/: CMakeLists.txt  main.cpp
